@@ -379,6 +379,7 @@ Special Pages:
 * JavaScript filter for Special:Allmessages
 * (bug 3047) Don't mention talk pages on Special:Movepage when there isn't one
 * Show links to user page, talk page and contributions page on Special:Newpages
+* Special:Export can now export a list of all contributors to an article (off by default)
 
 Misc.:
 * PHP 4.1 compatibility fix: don't use new_link parameter to mysql_connect
